--- a/MAD2502_P01_Sp25.ipynb
+++ b/MAD2502_P01_Sp25.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "<H3 align = \"right\">Spring 2025 Computer Project 01</H3>\n",
     "\n",
-    "## Group Number: `group_number`\n",
+    "## Group Number: `6`\n",
     " \n",
     "\n",
     "## Names of Student in Group:\n",
-    "- Name: `name_1`\n",
+    "- Name: `Makenna Butlak`\n",
     "- Name: `name_2`\n",
     "- Name: `name_3`\n"
    ]
