--- a/MAD2502_P01_Sp25.ipynb
+++ b/MAD2502_P01_Sp25.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "## Names of Student in Group:\n",
     "- Name: `Makenna Butlak`\n",
-    "- Name: `name_2`\n",
+    "- Name: `Solomiia Ivanovska`\n",
     "- Name: `name_3`\n"
    ]
   },
