--- a/MAD2502_P01_Sp25.ipynb
+++ b/MAD2502_P01_Sp25.ipynb
@@ -13,7 +13,7 @@
     "## Names of Student in Group:\n",
     "- Name: `Makenna Butlak`\n",
     "- Name: `Solomiia Ivanovska`\n",
-    "- Name: `name_3`\n"
+    "- Name: `Gabrille Polito`\n"
    ]
   },
   {
