--- a/MAD2502_P01_Sp25.ipynb
+++ b/MAD2502_P01_Sp25.ipynb
@@ -19,14 +19,19 @@
   {
    "cell_type": "code",
    "id": "0515ac07",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T21:51:59.751952Z",
+     "start_time": "2025-02-19T21:51:59.749007Z"
+    }
+   },
    "source": [
     "# You shouldn't need anything beyond these imports.  If you feel you do, talk to me.\n",
     "# You will need to import these inside of the respective py files.\n",
     "import numpy as np"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -77,9 +82,11 @@
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2025-02-04T21:24:07.930667Z",
-     "start_time": "2025-02-04T21:23:40.453954Z"
+     "start_time": "2025-02-19T21:52:05.603657Z"
     }
    },
    "cell_type": "code",
@@ -101,18 +108,8 @@
     "print(f\"      Simpson: {simpson_sum}\")"
    ],
    "id": "cae551bada86ab8b",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Left Endpoint: 1.9999999835473687\n",
-      "    Trapezoid: 1.999999983547369\n",
-      "      Simpson: 2.0\n"
-     ]
-    }
-   ],
-   "execution_count": 6
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
