--- a/MAD2502_P01_Sp25.ipynb
+++ b/MAD2502_P01_Sp25.ipynb
@@ -82,8 +82,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-21T19:51:39.348327Z",
-     "start_time": "2025-02-21T19:51:34.466525Z"
+     "end_time": "2025-02-21T19:52:32.938162Z",
+     "start_time": "2025-02-21T19:52:25.739611Z"
     }
    },
    "cell_type": "code",
@@ -108,19 +108,26 @@
    "id": "cae551bada86ab8b",
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    },
+    {
      "ename": "KeyboardInterrupt",
      "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[8], line 9\u001B[0m\n\u001B[1;32m      6\u001B[0m func \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39msin\n\u001B[1;32m      8\u001B[0m \u001B[38;5;66;03m# You don't need to change anything below this line\u001B[39;00m\n\u001B[0;32m----> 9\u001B[0m left_endpoint_sum \u001B[38;5;241m=\u001B[39m \u001B[43mriemann\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mleft_endpoint\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx_vals\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfunc\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     10\u001B[0m \u001B[38;5;66;03m#trapezoid_sum = riemann.trapezoid(x_vals, func)\u001B[39;00m\n\u001B[1;32m     11\u001B[0m \u001B[38;5;66;03m#simpson_sum = riemann.simpson(x_vals, func)\u001B[39;00m\n\u001B[1;32m     14\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mLeft Endpoint: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mleft_endpoint_sum\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n",
-      "File \u001B[0;32m~/PycharmProjects/MAD2502_P01/riemann.py:8\u001B[0m, in \u001B[0;36mleft_endpoint\u001B[0;34m(x_vals, func)\u001B[0m\n\u001B[1;32m      6\u001B[0m b \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28;01mwhile\u001B[39;00m x_vals[b] \u001B[38;5;241m<\u001B[39m\u001B[38;5;241m=\u001B[39m x_vals\u001B[38;5;241m.\u001B[39msize:\n\u001B[0;32m----> 8\u001B[0m     sum_left_endpoint \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[43mfunc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx_vals\u001B[49m\u001B[43m[\u001B[49m\u001B[43ma\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m \u001B[38;5;241m*\u001B[39m (x_vals[b] \u001B[38;5;241m-\u001B[39m x_vals[a])\n\u001B[1;32m      9\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m sum_left_endpoint\n",
+      "Cell \u001B[0;32mIn[11], line 10\u001B[0m\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mhello\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      9\u001B[0m \u001B[38;5;66;03m# You don't need to change anything below this line\u001B[39;00m\n\u001B[0;32m---> 10\u001B[0m left_endpoint_sum \u001B[38;5;241m=\u001B[39m \u001B[43mriemann\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mleft_endpoint\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx_vals\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfunc\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     11\u001B[0m \u001B[38;5;66;03m#trapezoid_sum = riemann.trapezoid(x_vals, func)\u001B[39;00m\n\u001B[1;32m     12\u001B[0m \u001B[38;5;66;03m#simpson_sum = riemann.simpson(x_vals, func)\u001B[39;00m\n\u001B[1;32m     15\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mLeft Endpoint: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mleft_endpoint_sum\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n",
+      "File \u001B[0;32m~/PycharmProjects/MAD2502_P01/riemann.py:7\u001B[0m, in \u001B[0;36mleft_endpoint\u001B[0;34m(x_vals, func)\u001B[0m\n\u001B[1;32m      5\u001B[0m a \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m0\u001B[39m\n\u001B[1;32m      6\u001B[0m b \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[0;32m----> 7\u001B[0m \u001B[38;5;28;01mwhile\u001B[39;00m x_vals[b] \u001B[38;5;241m<\u001B[39m\u001B[38;5;241m=\u001B[39m x_vals\u001B[38;5;241m.\u001B[39msize:\n\u001B[1;32m      8\u001B[0m     sum_left_endpoint \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m func(x_vals[a]) \u001B[38;5;241m*\u001B[39m (x_vals[b] \u001B[38;5;241m-\u001B[39m x_vals[a])\n\u001B[1;32m      9\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m sum_left_endpoint\n",
       "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 11
   },
   {
    "metadata": {},
